syntax = "proto3";

package recipe;

option go_package = "github.com/moromin/PFC-balancer/services/recipe/proto";

import "services/food/proto/food.proto";
import "google/api/annotations.proto";

service RecipeService {
    rpc CreateRecipe(CreateRecipeRequest) returns (CreateRecipeResponse) {
        option (google.api.http) = {
            post: "/recipes"
            body: "*"
        };
    }
    rpc FindRecipeById(FindRecipeByIdRequest) returns (FindRecipeByIdResponse)
    {
        option (google.api.http) = {
            get: "/recipes/{id}"
        };
    }
    rpc ListRecipes(ListRecipesRequest) returns (ListRecipesResponse){
        option (google.api.http) = {
            get: "/recipes"
        };
    }
}

message FoodAmount {
    int64 food_id = 1;
    double amount = 2;
}

message FoodPFCAmount {
    food.Food food = 1;
    double amount = 2;
}

message Recipe {
    int64 id = 1;
    string recipe_name = 2;
    repeated FoodPFCAmount food_pfc_amounts = 3;
    repeated string procedures = 4;
    string user_name = 5;
}

message CreateRecipeRequest {
    string name = 1;
    repeated FoodAmount food_amounts = 2;
    repeated string procedures = 3;
    int64 user_id = 4;
}

message CreateRecipeResponse {
    int64 id = 1;
}

message FindRecipeByIdRequest {
    int64 id = 1;
}

message FindRecipeByIdResponse {
    Recipe recipe = 1;
}

message ListRecipesRequest {}

message ListRecipesResponse {
    repeated Recipe recipes = 1;
}
